# coloph-migrations

./: .gitignore  README.md  TRADEMARKS.md  coloph-migrations.toml.example  pyproject.toml
src/coloph_migrations/: __init__.py  backwards.py  cli.py  config.py  git_checks.py  migrations.py  repair.py  schema.py  test_database.py
tests/: conftest.py  test_backwards.py  test_config.py  test_failure_parity.py  test_git_checks.py  test_migrations.py  test_schema.py  test_test_database.py
