[project]
name = "coloph-migrations"
version = "0.2.9"
description = "Agent-friendly PostgreSQL migration CLI extracted from Coloph"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "testcontainers[postgres]>=4.10",
]

[project.scripts]
coloph-migrate = "coloph_migrations.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coloph_migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
